# SteamArbBot

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOY_GUIDE.md  Dockerfile  main.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  replit.md  requirements.txt  steam_bot.db
attached_assets/: Pasted--Python--1773135077808_1773135077816.txt  logs.1773229622277_1773229652192.json
static/: app.js  style.css
steam_bot/: config.py  database.py  market.py  telegram_bot.py  tg_commands.py  trading.py
templates/: arbitrage.html  dashboard.html  portfolio.html  scanner.html  settings.html
